--- a/devybigboard-server/src/main/resources/application.yml
+++ b/devybigboard-server/src/main/resources/application.yml
@@ -2,10 +2,8 @@ spring:
   application:
     name: devy-board-api
   datasource:
-    url: jdbc:h2:mem:devyboard;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-    driverClassName: org.h2.Driver
-    username: sa
-    password:
+    url: jdbc:mysql://root:UeqBfbENteDmsqjaWTOCAjzBQbBmitou@maglev.proxy.rlwy.net:12007/railway
+    driverClassName: com.mysql.cj.jdbc.Driver
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
   h2:
